[tool.poetry]
name = "manager"
version = "0.1.0"
description = ""
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mineager = {git = "https://github.com/ooliver1/mineager"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
