[tool.poetry]
name = "manager"
version = "0.1.0"
description = ""
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "ELv2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
